# fatigue_driving_detection

./: .gitignore  CMakeLists.txt  README.md
APIGW/: Makefile  RequestParams.cpp  RequestParams.h  constants.h  cpp.sln  cpp.vcxproj  cpp.vcxproj.filters  hasher.cpp  hasher.h  header.h  main.cpp  signer.cpp  signer.h  utils.cpp  utils.h
config/: mpp_file_rtmp.json  mpp_rtsp_rtmp.json  mpp_v4l2_rtmp.json
ftp/: ftp.cpp  ftp.h
include/: SeqProcesser.hpp  SourceMgr.h  StreamMgr.h  VideoMgr.h  Yolov6Base.h  Yolov6EM.h  Yolov6PP.h  common.h  gst_call_back_funcs.h  postprocess.h
opencv/include/opencv2/: cvconfig.h
opencv/lib/: libavdevice.so.57.10.100  libavdevice.so.60.2.100  libavutil.so.55.78.100  libavutil.so.58.7.100  libjpeg.la  libopencv_core.so.3.2  libopencv_features2d.so.3.2.0  libopencv_flann.so.3.2  libopencv_highgui.so.3.2  libopencv_imgcodecs.so.3.2.0  libopencv_objdetect.so.3.2  libopencv_photo.so.3.2.0  libopencv_stitching.so.3.2.0  libopencv_video.so.3.2  libopencv_videostab.so.3.2  libpng.la  libpng16.so.16  libpostproc.so.54  libpostproc.so.57.2.100  libswresample.so.2  libswresample.so.4.11.100  libswscale.so.4  libswscale.so.7  libx264.so.148
opencv/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpng16.pc  libpostproc.pc  libswresample.pc  libswscale.pc  opencv.pc  x264.pc  zlib.pc
opencv/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules.cmake
socket/: tcp_clinent.cpp  tcp_clinent.h
src/: StreamMgr.cpp  VideoMgr.cpp  Yolov6Base.cpp  Yolov6EM.cpp  Yolov6PP.cpp  main.cpp  postprocess.cpp  test_npu.cpp
